Add analytics and enforce its shutdown in production

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,4 +29,9 @@
 
   <!-- MathJAX -->
   {% include mathjax.html %}
+
+  <!-- Google Analytics -->
+  {% if jekyll.environment == 'production' %}
+  {% include analytics.html %}
+  {% endif %}
 </head>
