Fix jemoji line breaking

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -428,3 +428,10 @@ a.pagination-item:hover {
     border-bottom-right-radius: 4px;
   }
 }
+
+img.emoji {
+    display: inline;
+    height: 1em;
+    width: 1em;
+    margin-bottom: 0.25em;
+}
