Fix jemoji line breaking

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -250,8 +250,6 @@ a.sidebar-nav-item:focus {
 }
 
 img.emoji {
-    display: inline;
-    height: 1em;
-    width: 1em;
-    margin-bottom: 0.25em;
+    display: initial;
+    margin: initial;
 }
