--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -430,8 +430,6 @@ a.pagination-item:hover {
 }
 
 img.emoji {
-    display: inline;
-    height: 1em;
-    width: 1em;
-    margin-bottom: 0.25em;
+    display: initial;
+    margin: initial;
 }
